[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-cli"
version = "0.1.0"
description = "Tiny interactive wrapper around a local vLLM server"
authors = [{ name = "George", email = "deezchannel@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "typer[all]>=0.12,<1.0",
  "prompt_toolkit>=3.0,<4.0",
  "pydantic>=2.0,<3.0",
  "requests>=2.0,<3.0",
  "psutil>=6.0,<7.0",
]

[project.scripts]
llm-cli = "llm_cli.cli:APP"